# school_bot

./: .gitignore  CHANGELOG.md  Procfile  README.md  pyproject.toml
src/: .env.template  BorysfenBotV97.py  requirements.txt  t.py
src/Additions/: Borysfen_DB_V97.py  maze_game.py  virustotal.py
