[tool.poetry]
name = "Borysfen"
version = "0.1.0"
description = ""
authors = ["user-sspmynxdvb"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
DateTime = "^5.2"
phonenumbers = "^8.13.24"
pyfiglet = "^1.0.2"
Pyrogram = "^2.0.106"
emoji = "^2.8.0"
wikipedia = "^1.4.0"
beautifulsoup4 = "^4.12.2"
qrcode = "^7.4.2"
gTTS = "^2.4.0"
Babel = "^2.13.1"
asyncio = "^3.4.3"
Faker = "^19.13.0"
pyshorteners = "^1.0.1"
urlextract = "^1.8.0"
pymongo = "^4.6.1"
cryptography = "^41.0.7"
TgCrypto = "^1.2.5"
icecream = "^2.1.3"
pydantic = "^2.5.1"
aiohttp = "^3.9.1"
ua-alarm = "^1.3.3"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
icecream = "^2.1.3"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
    "E501",
    "E722",
    "E731",
]